# distributed-column-aggregator

./: .clang-format  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  TODO  distro_refactor_checklist.txt  formatter  refactor_checklist.txt  run_benchmarks.sh  run_benchmarks_4_nodes.sh  run_benchmarks_8_nodes.sh  run_ctest.sh
.github/workflows/: docker-image.yml
benchmarks/: results_fetch_data_from_nodes.py  test_bench_example.py  test_db_example.py  test_double_add_element.py  test_double_column_simple_aggs.py  test_double_fetch_data_from_nodes.py  test_float_add_element.py  test_float_column_simple_aggs.py  test_int_add_element.py  test_int_column_simple_aggs.py
docker_setup/: 1_hub.yml  1_hub_1_node.yml  1_hub_2_nodes.yml  1_hub_2_nodes_local_2_nodes_remote.yml  1_hub_4_nodes.yml  1_hub_8_nodes.yml  2_remote_nodes.yml
docker_setup/setup_scripts/: init_node2.sh  init_node3.sh  init_node5.sh  init_node6.sh  init_node7.sh  init_node8.sh
docker_setup_example/: .docker-compose_host.yml.swp  1_hub.yml  1_hub_1_node.yml  1_hub_2_nodes.yml  1_hub_2_nodes_local_2_nodes_remote.yml  1_hub_4_nodes.yml  1_hub_8_nodes.yml  2_remote_nodes.yml  Dockerfile  README.md  docker-compose_host.yml
docker_setup_example/engine/: CMakeLists.txt  README.md  initDB.py
docker_setup_example/engine/src/: CMakeLists.txt  miniDBNode.cpp
docker_setup_example/engine/src/Aggregations/: SimpleAggsDist.cpp
docker_setup_example/engine/src/Column/: Column.h
docker_setup_example/engine/src/Context/: GlobalContext.cpp
docker_setup_example/engine/src/Networking/: SessionHandlerHub.cpp
docker_setup_example/engine/src/ParameterController/: ParameterControllerHub.cpp  ParameterControllerHub.h  ParameterControllerNode.cpp
docker_setup_example/engine/src/Tools/: CMakeLists.txt  Utility.h
docker_setup_example/engine/tests/: CMakeLists.txt
docker_setup_example/engine/tests/hub/: test_one.cpp
docker_setup_example/setup_scripts/: init_datanode.sh  init_node1.sh  init_node2.sh  init_node3.sh  init_node4.sh
docker_setup_example/x2_docker/: Dockerfile  docker-compose_host.yml  docker-compose_remote.yml
docker_setup_example/x2_docker/setup_scripts/: entrypoint.sql  init_coordinator.sh  init_gtm.sh
engine/: CMakeLists.txt  README.md  TODO  initDB.py
engine/data/: data1.csv
engine/src/: CMakeLists.txt  Traits.h  TraitsCol.h  bindings.h  constants.h  data3.csv  hub.cpp  hub.h  miniDBHub.cpp  miniDBNode.cpp  node.cpp  python_bindings.h  traits.h
engine/src/Aggregations/: CMakeLists.txt  SimpleAggsDist.h
engine/src/AggregationsNode/: CMakeLists.txt  SimpleAggs.cpp  SimpleAggs.h
engine/src/Column/: CMakeLists.txt  Column.cpp  Column.h
engine/src/ColumnEngine/: CMakeLists.txt  ColumnFactory.h  ColumnImpl.cpp  ColumnImpl.h  IColumn.h  IColumnFactory.h
engine/src/ColumnNode/: CMakeLists.txt  ColumnNode.cpp  ColumnNode.h
engine/src/ColumnNodeEngine/: CMakeLists.txt  ColumnNodeImpl.cpp  ColumnNodeImpl.h  IColumnNode.h
engine/src/ColumnNodeEngine/test/: CMakeLists.txt  ColumnNodeEngineTest.cpp
engine/src/ColumnNodeStorage/: CMakeLists.txt  ColumnNodeStorage.cpp  ColumnNodeStorage.h
engine/src/ColumnOperationsNode/: CMakeLists.txt  ColumnOperationsNode.cpp  ColumnOperationsNode.h
engine/src/ColumnStorage/: CMakeLists.txt  ColumnNode.cpp  ColumnNode.h  ColumnStorage.cpp  ColumnStorage.h
engine/src/ConfigurationManager/: CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.h
engine/src/Context/: CMakeLists.txt  GlobalContextHub.cpp  GlobalContextHub.h
engine/src/ContextNode/: CMakeLists.txt  GlobalContextNode.cpp  GlobalContextNode.h
engine/src/Factory/: CMakeLists.txt  Factory.cpp  Factory.h
engine/src/FactoryNode/: CMakeLists.txt  FactoryNode.cpp  FactoryNode.h
engine/src/Loki/: AbstractFactory.h  CMakeLists.txt  EmptyType.h  HierarchyGenerators.h  Loki.cpp  LokiExport.h  NullType.h  Sequence.h  Singleton.h  Threads.h  TypeManip.h  TypeTraits.h  Typelist.h  TypelistMacros.h
engine/src/Networking/: CMakeLists.txt  RPCManager.cpp  RPCManager.h  Session.cpp  Session.h  SessionHandlerHub.cpp  SessionHandlerHub.h  SessionNode.cpp  SessionNode.h  TCPServer.cpp  TCPServer.h
engine/src/NetworkingNode/: CMakeLists.txt  SessionHandlerNode.cpp  SessionHandlerNode.h
engine/src/ParameterController/: CMakeLists.txt  ParameterControllerHub.cpp  ParameterControllerHub.h  ParameterControllerNode.h
engine/src/ParameterControllerNode/: CMakeLists.txt  ParameterControllerNode.cpp  ParameterControllerNode.h
engine/src/TCPChannel/: CMakeLists.txt  Session.cpp  Session.h  SessionNode.cpp  SessionNode.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h
engine/src/Tools/: CMakeLists.txt  Utility.cpp  Utility.h  data1.csv
engine/src/Tools/test/: CMakeLists.txt  UtilityTest.cpp
engine/tests/hub/: CMakeLists.txt  test_setup.cpp  unittests.cpp
engine/tests/nodes/: CMakeLists.txt  test_one.cpp  test_two.cpp  unittests_node.cpp
engine/tests/nodes/ColumnOperations/: ColumnOperations.h
scripts/: run_benchmarks.sh  run_benchmarks_2_nodes.sh  run_benchmarks_4_nodes.sh  run_benchmarks_8_nodes.sh  run_ctest.sh
src/: CMakeLists.txt  client.cpp  miniDB.cpp  miniDBHub.cpp  miniDBServer.cpp  server.cpp
src/Aggregations/: CMakeLists.txt  SimpleAggs.cpp  SimpleAggs.h  SimpleAggsDist.cpp  SimpleAggsDist.h
src/Context/: CMakeLists.txt  GlobalContext.cpp  GlobalContext.h  GlobalContextHub.cpp  GlobalContextHub.h  GlobalContextNode.cpp  GlobalContextNode.h
src/Networking/: CMakeLists.txt  SessionHandler.cpp  SessionHandler.h  SessionHandlerHub.cpp  SessionHandlerHub.h  SessionHandlerNode.cpp  SessionHandlerNode.h  client.cpp  server.cpp  server2.cpp
src/ParameterController/: CMakeLists.txt  ParameterController.cpp  ParameterController.h  ParameterControllerHub.cpp  ParameterControllerHub.h
src/Tools/: Utility.h
tests/: test_setup.cpp  test_two.cpp
tests/hub/: CMakeLists.txt  test_one.cpp  test_two.cpp
tests/nodes/: test_one.cpp  test_two.cpp
